--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "main": "build/index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
+    "build": "npx prisma generate && tsc",
     "start": "node build/index.js",
     "prisma:migrate": "prisma migrate dev",
     "prisma:generate": "prisma generate",
